# trader

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  justfile  pyproject.toml
.claude/plans/: implementation-plan.md
.claude/skills/alpaca-api/: SKILL.md
.claude/skills/pydantic-patterns/: SKILL.md
.claude/skills/pytest-testing/: SKILL.md
.claude/skills/python-async/: SKILL.md
.claude/skills/trading-strategy/: SKILL.md
.github/workflows/: ci.yml
scripts/: run_backtest.py
src/trader/: __init__.py  cli.py
src/trader/broker/: __init__.py  alpaca.py  base.py  paper.py  trailing_stop_manager.py
src/trader/config/: __init__.py  settings.py  strategy_config.py
src/trader/core/: __init__.py  models.py
src/trader/dashboard/: __init__.py  live.py
src/trader/data/: __init__.py  fetcher.py  sentiment.py  web_sentiment.py
src/trader/engine/: __init__.py  backtest.py  costs.py  live.py  montecarlo.py  walkforward.py
src/trader/notifications/: __init__.py  discord.py
src/trader/portfolio/: __init__.py  rebalance.py
src/trader/risk/: __init__.py  analytics.py  manager.py
src/trader/scheduler/: __init__.py  scheduler.py
src/trader/storage/: __init__.py  database.py
src/trader/strategies/: __init__.py  base.py  multi.py  registry.py
src/trader/strategies/builtin/: __init__.py  bollinger.py  macd.py  mean_reversion.py  momentum.py  pairs.py  rsi.py  sentiment.py  sma_crossover.py  vwap.py
tests/: __init__.py  conftest.py
tests/unit/: test_backtest.py  test_broker.py  test_costs.py  test_dashboard.py  test_data_fetcher.py  test_live_engine.py  test_models.py  test_montecarlo.py  test_multi_strategy.py  test_new_strategies.py  test_pairs_strategy.py  test_rebalance.py  test_risk.py  test_risk_analytics.py  test_scheduler.py  test_sentiment.py  test_sentiment_strategy.py  test_settings.py  test_strategies.py  test_trailing_stop_manager.py  test_walkforward.py  test_web_sentiment.py
