[project]
name = "trader"
version = "0.1.0"
description = "Automated stock trading platform with backtesting and paper trading"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Don Nguyen" }]

dependencies = [
    # Alpaca SDK
    "alpaca-py>=0.21.0",
    # Data handling
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Backtesting
    "backtesting>=0.3.3",
    # Technical indicators
    "ta>=0.10.0",
    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Async support
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    # Logging
    "loguru>=0.7.0",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    "finvizfinance>=1.2.0",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
]

[project.scripts]
trader = "trader.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ARG002", # unused method argument - often intentional for interface compliance
]

[tool.ruff.lint.isort]
known-first-party = ["trader"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "alpaca.*",
    "backtesting.*",
    "ta.*",
    "loguru.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/trader"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
